tests/paczka2/big_fuzzy/40791472.err
Error in line 11: aG7nmEo7gsr S520 44,32
Error in line 16: ImKTrKhOirR S520 9,0
Error in line 14: aG7nmEo7gsr S520 5,1
Error in line 27: aG7nmEo7gsr S135 48,0
Error in line 57: S568 S568 5,8
Error in line 54: 7u9KA0G6 S880 99,9
Error in line 67: 7u9KA0G6 S135 47,4
Error in line 95: MqSdA7S88061,8
Error in line 102: aG7.mEo7gsr S568 32,5
Error in line 103: OlqXDwBSM S880 50,51
Error in line 104: OlqXDwBSM S88¾ 58,1
Error in line 105: MqSdA7 S880 305,3
Error in line 112: aG7nmEo7gsr S135 9G,6
Error in line 107: aG7nmEo7gsr S568 4,6
Error in line 106: 7u9KA0G6 S568 38,0
Error in line 122: MqSdA7 S568 43,5
Error in line 126: XUL1OncWUB S880 48,1
Error in line 129: OlqXDwBSM S135 85,5
Error in line 137: ImKTrKhOirR S135 -2,8
Error in line 144: S568 S520 58,1
Error in line 130: ImKTrKhOirR S135 23,5
Error in line 150: OlqXDwBSM S880 25,8
Error in line 160: 7u9KA0G6 S520 146,2
Error in line 162: 7u9KA0G6 S568 35,0
Error in line 156: OlqXDwBSM S135 58,1
Error in line 155: ImKTrKhOirR S520 4,9
Error in line 157: aG7nmEo7gsr S135 26,4
Error in line 174: XUL1OncWUB S520 12,7
Error in line 176: XUL1OncWUB S880 63,2
Error in line 182: ImKTrKhOirR S135 62,5
Error in line 187: aG7nmEo7gsr S568 44,5
Error in line 199: XUL1OncWUB S880 50,1
Error in line 205: 7u9KA0G6 S568 80,0
Error in line 214: 7u9KA0G6 S135 69,0
Error in line 223: OlqXDwBSM S880 83,3
Error in line 197: MqSdA7 S135 323,3
Error in line 229: MqSdA7 S880 98,6
Error in line 230: MqSdA7 S520 43,9
Error in line 203: S568 S520 85,1
Error in line 247: S568 S568 64,5
